8065402: G1 does not expand marking stack when mark stack overflow happens during concurrent marking

Simplified decision mechanism for marking stack expansion

Reviewed-by: kbarrett, tschatzl